--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -5,7 +5,7 @@
 
 ## char类型
 
-+ `char`类型用于存储字符，例如字符或标点符号。但是从技术层面看，`char`是整数类型。
++ `char` 类型用于存储字符，例如字符或标点符号。但是从技术层面看，`char` 是整数类型。
 + 因为`char`类型实际上存储的是整数而不是字符。计算机使用数字编码来处理字符，即用特定的整数表示特定的字符。
 
 ## `%04x`
@@ -14,7 +14,9 @@
 + `4`表示输出的十六进制数的宽度是4个字符
 + `0`表示输出的十六进制数中，不足4个字符的部分，用`0`来补充，以达到4个字符的宽度
 
-## 字符串 -- C语言
+## 字符串 
+
+### C语言中的字符串
 
 + 字符串(character string)是一个或多个字符的序列，例如"this is a string!"
 + 双引号不是字符串的一部分。双引号**仅告知编译器它括起来的是字符串**，正如单引号用于标识单个字符一样。
@@ -27,16 +29,6 @@
   + 字符串常量"y"和字符常量"x"不同。
   + 区别之一在于"x"是**基本类型(char)**，而"y"是**派生类型(char数组)**；
   + 区别之二是"y"实际上由两个字符组成：'x'和空字符'\0'
-
-## 字符串 -- C++
-
-+ 字符串是存储在内存的连续字节中的一系列字符
-
-+ C++处理字符串的方式有两种：
-  - 第一种来自C语言，常被称为C-风格字符串(`C-style string`)
-  - 另一种基于`string`类库的方法
-
-### C-风格字符串
 
 + C-风格字符串具有一种特殊的性质：**以空字符(null character)结尾，空字符被写作`\0`**，其ASCII码为0，用来标记字符串的结尾。例如
   - `char dog[8] = {'b', 'e', 'a', 'u', 'x', ' ', 'I', 'I'};  // not a string`
@@ -51,7 +43,15 @@
     - 将数组初始化为字符串常量
     - 将键盘或文件输入读入到数组中
 
-### `std::string`类简介
+### C++中的字符串
+
++ 字符串是存储在内存的连续字节中的一系列字符
+
++ C++处理字符串的方式有两种：
+  - 第一种来自C语言，常被称为C-风格字符串(`C-style string`)
+  - 另一种基于`string`类库的方法
+
+### C++的string类
 
 + C++程序常使用指针（而不是数组）来处理字符串
 + `ISO/ANSI C++98`标准通过添加`string`类扩展了C++库，因此现在可以`string`类型的变量（使用C++的话说，是**对象**）而不是字符数组来存储字符串。
@@ -60,11 +60,96 @@
   - 可以使用`cin`来将键盘输入存储到`string`对象中
   - 可以使用`cout`来显式`string`对象
   - 可以使用数组表示法来访问存储在`string`对象中的字符
+
 + `string`对象和字符数组之间的主要区别是：可以将`string`对象声明为简单变量，而不是数组。
   - `string str1;  // create an empty string object`
   - `string str2 = "panther"; // create an initialized string`
 + 类设计让程序能够自动处理`string`的大小。这使得与使用数组相比，使用`string`对象更方便，也更安全。
-+ 从理论上来说，可以将`char`数组视为**一组用于存储一个字符串的`char`存储单元**，而`string`类变量是**一个表示字符串的实体**。
++ 从理论上来说
+  + 可以将`char`数组视为**一组用于存储一个字符串的`char`存储单元**，
+  + 而`string`类变量是**一个表示字符串的实体**。
+
+#### string类的构造函数
+
++ `std::string(const char *s)` ：将 `std::string` 对象初始化为 s 指向的字符串
+  + `std::string str("Hello!");`
+
++ `std::string(size_type n,char c)` ：创建一个包含 n 个元素的 `std::string` 对象，其中每个元素都被初始化为字符 c
+  + `std::string str(10,'a');`
+
++ `std::string(const std::string &str)` ：将一个 `std::string` 对象初始化为 `std::string` 对象 str（复制构造函数）
+  + `std::string str1("hello!");`
+  + `std::string str2(str1);`
+
++ `std::string()` ：创建一个默认的 `std::string` 对象，长度为 0（默认构造函数）
+  + `std::string str;` 　　　　// 创建一个空的 std::string 对象
+
++ 使用C语言风格初始化`std::string`对象
+  + `std::string str = "string";`
+
+#### 获取string对象的长度
+
++ 在 C 语言中，使用 strlen 函数获取字符串的长度。在 C++ 中，可以使用 string.size() 函数或 string.length() 函数来获得 string 对象的长度。在 C++ 标准库中，两者的源代码如下 ：
+  ```
+    size_type   __CLR_OR_THIS_CALL   length()   const   
+      { //   return   length   of   sequence   
+      return   (_Mysize);   
+      }   
+        
+    size_type   __CLR_OR_THIS_CALL   size()   const   
+    { //   return   length   of   sequence   
+    return   (_Mysize);   
+    }
+  ``` 
+
++ 可见，这两个方法是完全一样的，并没有区别。
+  + length() 方法是 C 语言习惯保留的，
+  + size() 方法则是为了兼容 STL 容器而引入的。
+
+#### 复制 string 对象
+
++ 在 C 语言中，使用 strcpy、strncpy 函数来实现字符串的复制。
++ 在 C++ 中则方便很多，可以直接将一个 string 对象赋值给另一个 string 对象
+
+#### string 对象的拼接和附加
+
++ 在 C 语言中，使用 strcat、strncat 函数来进行字符串拼接操作。在 C++ 中也有多种方法来实现字符串拼接和附加操作：
+  + 使用 + 操作符拼接两个字符串
+  + 使用 += 操作符在字符串后面附加内容
+  + 使用 string.append() 函数.可以使用 string.append() 函数来在一个 string 对象后面附加一个 string 对象或 C 风格的字符串：
+  + 使用 string.push_back() 函数.可以使用 string.push_back() 函数来在一个 string 对象后面附加一个字符：
+
+#### string 对象的比较
+
++ 在 C 语言中，使用 strcmp、strncmp 函数来进行字符串的比较。在 C++ 中，由于将 string 对象声明为了简单变量，故而对字符串的比较操作十分简单了，直接使用关系运算符（==、!=、<、<=、>、>=）即可：
++ 当然，也可以使用类似 strcmp 的函数来进行 string 对象的比较，string 类提供的是 string.compare() 方法，函数原型如下：
+  ```
+    int compare(const string&str) const;
+
+    int compare（size_t pos，size_t len，const string&str）const;　　　　// 参数 pos 为比较字符串中第一个字符的位置，len 为比较字符串的长度
+
+    int compare（size_t pos，size_t len，const string&str, size_t subpos，size_t sublen）const;
+
+    int compare（const char * s）const;
+
+    int compare（size_t pos，size_t len，const char * s）const;
+
+    int compare（size_t pos，size_t len，const char * s，size_t n）const;
+  ``` 
++ compare 方法的返回值如下：
+  + 返回 0，表示相等；
+  + 返回结果小于 0，表示比较字符串中第一个不匹配的字符比源字符串小，或者所有字符都匹配但是比较字符串比源字符串短；
+  + 返回结果大于 0，表示比较字符串中第一个不匹配的字符比源字符串大，或者所有字符都匹配但是比较字符串比源字符串长。
+
+#### 使用 string.substr() 函数来获取子串
+
++ 可以使用 string.substr() 函数来获取子串，string.substr() 函数的定义如下：
+  + `string substr（size_t pos = 0，size_t len = npos）const;`
++ 其中，pos 是子字符串的起始位置（索引，第一个字符的索引为 0），len 是子串的长度。这个函数的功能是：复制一个 string 对象中从 pos 处开始的 len 个字符到 string 对象 substr 中去，并返回 substr。
+
+#### 访问 string 字符串的元素 
+
++ 可以像 C 语言中一样，将 string 对象当做一个数组，然后使用数组下标的方式来访问字符串中的元素；也可以使用 string.at(index) 的方式来访问元素（索引号从 0 开始）：
 
 
 ## 类型说明符(占位符)
@@ -115,8 +200,6 @@
 + **指针减去一个整数**：可以使用`-`运算符从一个指针中减去一个整数
 + **递减指针**：可以计算两个指针的差值。通常，求差的两个指针分别指向同一个数组的不同元素，通过计算求出两元素之间的距离。差值的单位与数组类型的单位相同
 + **比较**：使用关系运算符可以比较两个指针的值，前提是两个指针都指向相同类型的对象。
-
-
 
 ## 动态内存 new/malloc delete/free
 
@@ -277,13 +360,17 @@
 
 + `this`只能在成员函数中使用，全局函数，静态函数都不能使用`this`。
   - 实际上，成员函数默认第一个参数为`T* const this`
+
 + `this`在成员函数的开始前构造，在成员函数的结束后清除。这个生命周期同任何一个函数的参数都是一样的，没有任何区别
+
 + `this`指针存放在何处？
   - `this`指针会因为编译器不同而有不同的为值。可能是栈，也可能是寄存器，甚至全局变量。
   - 在汇编级别里面，一个值只会以三种形式出现：立即数，寄存器值和内存变量值。
   - **不是存放在寄存器就是存放在内存中**，它们并不是和高级语言变量对应的
+
 + `this`指针是如何传递类中的函数的？
   - 大多数编译器通过`ecx`寄存器传递`this`指针。
+
 + 每个类编译后，是否创建一个类中函数表保存函数指针，以便用来调用函数？
   - 普通的类函数（不论是成员函数，还是静态函数）都不会创建一个函数表来保存函数指针。
   - 只有**虚函数才会被放到函数表中**。但是，即使是虚函数，如果编译器能明确知道调用的是哪个函数，编译器就不会通过函数表中的指针来间接调用，而是会直接调用该函数。
@@ -818,7 +905,6 @@
       return i == 0 ? n : (~n + 1);
     }
   ``` 
-      
 
 ## 构造函数和析构函数
 
