--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -27,6 +27,15 @@
   + `type __sync_val_compare_and_swap(type *ptr, type oldval, type newval,...);`
     + 返回写入之前的值
 
+## sleep()
+
++ 简述：睡眠函数
++ 声明：`unsigned int sleep(unsigned int __seconds);`
++ 参数：
+  + `__seconds`  --  睡眠的时间，单位为秒
++ 注意：
+  + 需要包含头文件：`<unistd.h>`
+
 ## calloc()
 
 + 简述：分配所需的内存空间,并返回一个指向它的指针
