--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,10 @@
+## perror()
+
++ 功能：把一个描述性错误消息输出到标准错误 stderr
++ 原型：`void perror(const char *str);`
++ 参数：
+  + `str`  --  这是 C 字符串，包含了一个自定义消息，将显示在原本的错误消息之前。
+
 ## daemon()
 
 + 功能：将程序置于后台，并与控制终端分离
@@ -5,8 +12,6 @@
 + 参数：
   + `nochdir`  --  如果为0，执行`chdir ("/")`
   + `noclose`  --  如果为0，将`stdin, stdout, stderr`重定向到`/dev/null`
-+ 返回值：
-  + 
 
 ## strchr()
 
@@ -48,7 +53,6 @@
 + 返回值：
   + 成功  --  0
   + 失败  --  -1，并设置errno
-+ 
 
 ## fork()
 
