--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,13 @@
 ## 概述 -- 理论基础知识
 
+## 如何确定gcc支持的C++版本
+
++ 根据gcc的版本号来推断
+  - gcc --version: 可以用来查看版本号，例如是8.3.0，查询8.3.0版本的gcc是那一年发布的，从而推断其支持的C++标准
+
++ man gcc
+  - 查询帮助，通过检索`-std` 查看该参数支持的值
+
 ## C命令行参数
 
 + 执行程序时，可以从命令行传值给 C 程序。这些值被称为命令行参数，它们对程序很重要，特别是当您想从外部控制程序，而不是在代码内对这些值进行硬编码时，就显得尤为重要了。
