--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,30 @@
 ## 概述 -- 理论基础知识
 
+## 静态库和动态库的区别
+
++ 载入时间：
+  + 静态库的代码在编译的过程中已经载入到可执行文件中，所以最后生成的可执行文件比较大
+  + 动态库的代码在可执行程序运行时才载入内存，在编译过程中仅简单的引用，所以最后生成的可执行文件相对较小
+
++ 最大的区别是：
+  + 静态库链接的时候，把库直接加载到程序中，
+  + 而动态库链接的时候，它只是保留接口，将动态库和程序代码独立，这样就可以提高代码的可复用度和降低程序的耦合性
+
++ 代码使用的区别：
+  + 静态库在程序编译时，会被链接到目标代码中，程序运行时不再需要该静态库
+  + 动态库在程序编译时，并不会被链接到目标代码中，而是在程序运行时才被载入，因此在程序运行的时候还需要动态库存在
+
++ 注：
+  + 无论是静态库，还是动态库，都是由`.o`文件创建的，因此，我们必须将源程序通过gcc编译成`.o`文件
+
+## 查找C/C++的路径
+
++ C
+  + `gcc -v -E -x c -`
+
++ C++
+  + `gcc -v -E -x  c++ -`
+
 ## 如何确定gcc支持的C++版本
 
 + 根据gcc的版本号来推断
