--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,36 @@
 ## C/C++ 常用编程技巧
 
+### 类型转换
+
++ 移除const属性
+  + `const_cast()`
+
++ 语言支持的显示强制转换，将int转换为double，将int转换为bool
+  + `static_cast()`
+
++ 用户定义的构造函数或转换函数支持的显示强制转换
+  + `static_cast()`
+
++ 一个类的对象转换为另一个（无关）的类的对象
+  + `bit_cast()`
+
++ 在同一继承层次结构中，一个类的指针转换为另一个类的指针
+  + 建议`dynamic_cast()`，或`static_cast()`
+
++ 在同一继承层次结构中，一个类的引用转换为另一个类的引用
+  + 建议`dynamic_cast()`，或`static_cast()`
+
++ 指向一种类型的指针转换为指向其他不相关类型的指针
+  + `reinterpret_cast()`
+
++ 一种类型的引用转换为其他不相关的类型的引用
+  + `reinterpret_cast()`
+
++ 指向函数的指针转换为指向函数的指针
+  + `reinterpret_cast()`
+
+### typeid
+
 ### 函数参数设置默认值
 
 + 示例：
