--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,4 +1,35 @@
-## 概述 -- 理论基础知识
+# 概述 -- 理论基础知识
+
+## 关于命令行参数
+
++ 命令行参数可以分为两类，一类是短选项，一类是长选项。短选项在参数前加一杠`-`，长选项在参数前连续加两杠`--`
+  + -a，-A，-b 都表示短选项
+  + --all，--almost-all，--author 都表示长选项
++ 他们两者后面都可选择性添加额外参数。如：--block-size=SIZE，其中 SIZE 便是额外参数。
+
+## C/C++程序的主函数参数
+
++ C/C++程序的主函数有两个参数：
+  + 第一个参数是整型，可以获得包括程序名字的参数个数
+  + 第二个参数是字符数组指针或字符指针的指针，可以按顺序获得命令行上各个字符串参数。
++ 其原形是：
+  ```
+    int main(int argc, char *argv[]);
+    //或者
+    int main(int argc, char **argv);
+  ``` 
+
++ 如何解析命令行输入的参数，可以使用下面三个glibc库函数来实现
+  + `int getopt(int argc, char * const argv[],const char *optstring)`
+  + `int getopt_long(int argc, char * const argv[],const char *optstring,const struct option *longopts, int *longindex);`
+  + `int getopt_long_only(int argc, char * const argv[],const char *optstring,const struct option *longopts, int *longindex);`
+
++ 三者的区别：
+  + getopt()只支持短格式选项
+  + getopt_long()既支持短格式选项，又支持长格式选项
+  + getopt_long_only()用法和getopt_long()完全一样，唯一的区别在输入长选项的时候可以不用输`--`而使用`-`
+
++ 一般情况下，使用getopt_long()来完成命令行选项以及参数的获取。
 
 ## 静态库和动态库的区别
 
@@ -546,16 +577,6 @@
 + `cwd`:程序源代码路径(**重要**)
 + `miDebuggerPath`:交叉编译工具中的gdb
 + `miDebuggerServerAddress`:远程gdbserver服务,根据设备对应修改
-
-### `gdbserver`使用方法，与PC机xxx-gdb搭配使用
-
-+ 开发板：`gdbserver <ip address> <listening port> <program>`
-  + 例如：`gdbserver 192.167.66.112:9999 demo_02.exe`
-  + 需要注意的一点是：需要调试的程序在编译时记得加上`-g`参数
-
-+ PC机:在终端中输入`aarch64-linux-gnu-gdb`之后进入gdb调试模式，然后输入`target remote ip-address:port`即可连接远程目标
-
-+ 交叉编译，程序的参数是从gdbserver 传进来的，其原理就是将调试信息通过端口发送到远程
 
 ## 多核编程
 
