--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,29 @@
 ## C/C++ 常用编程技巧
 
+### C/C++ 浮点数比较
+
++ 首先，声明一个C/C++中非常重要的原则：
+  + 除了可以表示为2的幂次以及整数数乘的浮点数可以准确表示外，其余的数的值都是近似值。
+
++ 一般解决方法：
+  + 保留指定精度，强制转成整型，在进行判断
++ 代码
+  ```
+    double r {0.016392123};
+    double m {0.0163922131};
+
+    int r2 = static_cast<int>(r * 1e6);
+    int m2 = static_cast<int>(m * 1e6);
+  ``` 
+
+### std::vector
+
++ 初始化
+  + `std::vector<int> ids(10,-1);`
++ 参数：
+  + 10 , 初始化10个元素
+  + -1 , 将默认值设置为-1
+
 ### 类型转换
 
 + 移除const属性
