--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,92 @@
 ## C/C++ 常用编程技巧
 
+### 链接静态库顺序问题
+
++ 默认情况下要求被依赖的库放在依赖它的库后面，当一个程序或共享库依赖的静态库较多时，可能会陷入解决链接问题的坑中
++ 如果对静态库不熟悉，需要结构nm等工具来解决顺序问题。
++ 但也可以偷懒，不关心静态库的顺序问题，ld为此提供了start-group和end-group两个选项，让包含在这两者间的静态库顺序可以随意。
+
++ 以CMake为例，假设程序x依赖三个静态库：libX1.a、libX2.a和libX3.a，而libX2.a又依赖libX1.a，libX3.a依赖libX2.a和libX1.a，正常情况下的CMakeLists.txt格式如下：
+  ```
+    add_executable(
+
+        x
+
+        x.cpp
+
+    )
+
+    target_link_libraries(
+
+        x
+
+        libX1.a
+
+        libX2.a
+
+        libX3.a
+
+    )
+  ```
+
++ 上面的写法libX1.a、libX2.a和libX3.a的顺序不能变，只能按上面的先后顺序。如果去掉顺序的烦恼和痛苦，可以采用如下的写法：
+  ```
+    target_link_libraries(
+
+        x
+
+        -Wl,--start-group
+
+        libX1.a
+
+        libX3.a
+
+        libX2.a
+
+        -Wl,--end-group
+
+    )
+
+    或
+
+    target_link_libraries(
+
+        x
+
+        -Wl,--start-group
+
+        libX3.a
+
+        libX2.a
+
+        libX1.a
+
+        -Wl,--end-group
+
+    )
+  ``` 
+
++ 前面说了start-group和end-group是ld的选项，是链接选项，不是gcc/g++的编译选项，直接命令行或其它编译方式也可以使用，比如命令行方式：
+  + `g++ -g -o x x.cpp -Wl,--start-group libX2.a libX1.a libX3.a -Wl,--end-group`
+
+### `-Wl`的使用
+
++ -Wl表示后面的参数传递给链接器，其中l是linker的意思。
++ 链接时指定共享库的搜索路径（类似于设置LD_LIBRARY_PATH）：`-Wl,-rpath=/usr/local/abc:/data/abc`
++ 以上也可以分开写：`-Wl,-rpath=/usr/local/abc -Wl,-rpath=/data/abc`
+
++ 部分库链接它的静态库，部分库链接它的共享库：`-Wl,-static -lb -Wl,-call_shared -la -lz`
++ 指定链接器：`-Wl,-dynamic-linker /lib/ld-linux.so.2 -e _so_start`
++ 指定导出的符号：`-Wl,--export-dynamic,--version-script,exports.lds`
++ 指定共享库的soname：`-Wl,--export-dynamic,--version-script,exports.lds,-soname=libqhttpd.so`
+
++ -rpath 增加共享库搜索路径
++ --retain-symbols-file表示不丢弃未定义的符号和需要重定位的符号
++ --export-dynamic 创建一个动态连接的可执行程序时, 把所有的符号加到动态符号表中
+
++ 用“-Wl,-Bstatic”指定链接静态库，使用“-Wl,-Bdynamic”指定链接共享库，使用示例：
+  + `-Wl,-Bstatic -lmysqlclient_r -lssl -lcrypto -Wl,-Bdynamic -lrt -Wl,-Bdynamic -pthread -Wl,-Bstatic -lgtest`
+
 ### C/C++ 浮点数比较
 
 + 首先，声明一个C/C++中非常重要的原则：
