--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -1189,6 +1189,7 @@
 
 + `vector`类的功能比数组强大，但**付出的代价是效率稍低**。
 + 如果需要的是长度固定的数组，使用数组是更佳的选择，但代价是不那么方便和安全。
++ 这个类的目的是让array能够分配在栈上，而不是像vector那样总是需要访问自由存储区
 
 + 有鉴于此，C++11新增了模板类`array`，它也位于名称空间`std`中。
 + 与数组一样，`array`对象的长度也是固定的，也使用栈（静态内存分配），而不是自由存储区，因此其效率与数组相同，但更方便和安全。
@@ -1273,6 +1274,16 @@
   + 返回值：指向向量内部使用的数组中第一个元素的指针。
     - 如果向量对象是`const`限定的，则该函数返回一个指向`const value_type`的指针。
     - 否则，它返回指向`value_type`的指针。
+
++ 固定长度的vector
+  + vector提供了一个可以指定元素数量的构造函数，还提供了一个重载的`operator[]`以便于访问和修改这些元素。
+  + 通过`operator[]`访问`vector`边界之外的元素时，得到的结果是未定义的。其与真正的数组索引一样，vector上的`operator[]`没有提供边界检查功能
+  + 除了使用`operator[]`运算符外，还可以通过`at(), front(), back()`访问`vector`中的元素。
+  + `at()`方法等同于`operator()`运算符，区别在于`at()`会执行边界检查，如果索引超出边界，`at()`会抛出`out_of_range`异常
+  + `front()`和`back()`分别返回`vector`的第一个元素和最后一个元素的引用。在空的容器上调用`front()`和`back()`会引发未定义的行为
+
++ assign()
+  + 这个方法删除了所有现有的元素，并添加任意数目的新元素。这个方法特别适合于`vector`的重用。
 
 ### 元组 tuple
 
