--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,27 @@
 # 概述 -- 理论基础知识
 
+## 函数对象
+
++ 可以重载类中的函数调用运算符，以便用类的对象代替函数指针。这些对象称为函数对象，或者简称仿函数
++ 使用函数对象而不是使用简单函数的好处是：函数对象可以在调用之间保持状态。
+
++ 要使任何类称为函数对象，只需要重载函数调用运算符。
+
+## 函数指针
+
++ C++中的函数被称为一级函数，因为函数可以像普通变量一样使用，例如将它们作为参数传递给其他函数，从其他函数返回它们，将它们赋值给变量。
++ 在这个上下文中经常出现的术语叫回调，它表示可以调用的东西，它可以使函数指针或任何行为类似于函数指针的东西，比如重载了operator()的对象，或内联lambda表达式。
++ 重载operator()的类称为函数对象，简称functor
+
++ 函数指针根据参数类型和兼容函数的返回类型进行类型划分，使用函数指针的一种方法是使用类型别名，类型别名允许将类型名称赋值给具有给定特征的函数族。
++ 举例，下面一行定义了一种名为Matcher的类型，它表示指向任何具有两个int形参并返回bool的函数的指针：
+  + `using Matcher = bool (*)(int, int);`
++ 下面的类型别名定义了一种名为MatchHandler的类型，用于接收一个size_t和两个int型作为参数和没有返回值的函数
+  + `using MatchHandler = void (*)(size_t, int, int);`
+
++ 既然定义了这些类型，可以编写一个接收两个回调(Matcher, MatchHandler)作为参数的函数。
++ 接收其他函数作为参数的函数，或返回函数的函数称为高阶函数
+
 ## 关于命令行参数
 
 + 命令行参数可以分为两类，一类是短选项，一类是长选项。短选项在参数前加一杠`-`，长选项在参数前连续加两杠`--`
