--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,19 @@
+## memcpy
+
++ 简介：
+  + C 库函数 void *memcpy(void *str1, const void *str2, size_t n) 从存储区 str2 复制 n 个字节到存储区 str1。
+
++ 声明
+  + `void *memcpy(void *str1, const void *str2, size_t n);`
+
++ 参数：
+  + str1 -- 指向用于存储复制内容的目标数组，类型强制转换为 void* 指针。
+  + str2 -- 指向要复制的数据源，类型强制转换为 void* 指针。
+  + n -- 要被复制的字节数。
+
++ 返回值：
+  + 该函数返回一个指向目标存储区 str1 的指针。
+
 ## getopt
 
 + 简介：getopt() 方法是用来分析命令行参数的，该方法由 Unix 标准库提供，包含在 `<unistd.h>` 头文件中。
