增加了rk平台的业务设计文档

--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,23 @@
+## newlocale
+
++ `newlocale`是一个C语言函数，用于创建一个新的区域设置对象。区域设置对象是一个数据结构，包含了与特定地区相关的本地化信息，如日期格式、货币符号、语言偏好等。
+
++ `newlocale`函数的原型如下：
+  ```c
+    #include <locale.h>
+
+    locale_t newlocale(int category_mask, const char *locale, locale_t base);
+  ```
+
++ 参数解释如下：
+  - `category_mask`：一个位掩码，用于指定要设置的区域设置的不同方面。可以使用`LC_ALL`表示所有方面，或使用以下值之一：`LC_COLLATE`、`LC_CTYPE`、`LC_MONETARY`、`LC_NUMERIC`、`LC_TIME`。
+  - `locale`：一个字符串，表示要创建的区域设置的名称。可以是特定地区的名称（例如："en_US"表示美国英语），也可以是一些特殊值（例如："C"表示默认的"POSIX"区域设置）。
+  - `base`：一个基本区域设置对象，用作新区域设置的基础。可以将其设置为`NULL`，表示没有基础区域设置。
+  
++ 函数返回一个`locale_t`类型的值，表示新创建的区域设置对象。如果创建失败，函数返回`NULL`。
+
++ 使用`newlocale`函数可以创建新的区域设置对象，以便在程序中进行本地化设置，从而使程序能够适应不同的地区和语言环境。创建后的区域设置对象可以传递给其他一些与本地化相关的函数，如`strftime`、`strcoll`等，以便根据特定区域的规则进行相应的操作。
+
 ## memcpy
 
 + 简介：
@@ -19,7 +39,7 @@
 + 简介：getopt() 方法是用来分析命令行参数的，该方法由 Unix 标准库提供，包含在 `<unistd.h>` 头文件中。
 
 + 定义：
-  ```
+  ```c
     int getopt(int argc, char * const argv[], const char *optstring);
      
     extern char *optarg;
@@ -59,7 +79,7 @@
       + 一个字符，后面接一个冒号-----表示选项后面带一个参数，如: -a 100
       + 一个字符，后面接两个冒号-----表示选项后面带一个可选参数，即参数可有可无，如果带参数，则选项与参数之间不能有空格，如: -b200
   + longopts：表示长选项结构体：
-    ```
+    ```c
       struct option
       {
         const char *name;
