--- a/CPP/C-C++04_常用库.md
+++ b/CPP/C-C++04_常用库.md
@@ -1,4 +1,112 @@
-## 概述 --  各组件接口使用笔记
+# 概述 --  各组件接口使用笔记
+
+## linux-vdso.so
+
++ linux-vdso.so.1 是一个特殊的动态链接库，它在 Linux 系统中起着重要的作用。VDSO 是 Virtual Dynamic Shared Object（虚拟动态共享对象）的缩写，它是 Linux 内核提供的一种特殊的机制，用于在用户空间和内核空间之间进行高效的系统调用。
++ linux-vdso.so.1 库实际上不是一个真正的共享库文件，而是内核在每个进程的地址空间中映射的一个虚拟文件。它通过特殊的技术将一些常见的系统调用实现以内联汇编的方式嵌入到用户空间程序中，避免了频繁的用户态到内核态的切换。
++ 通过使用 VDSO，一些常见的系统调用，例如获取当前时间、获取进程 ID、获取系统调用号等，可以在用户空间直接执行，而无需陷入内核执行。这大大减少了系统调用的开销，提高了程序的性能。
++ linux-vdso.so.1 是一个系统生成的文件，其路径通常为 "/lib/ld-linux.so.2" 或 "/lib/ld-linux-armhf.so.3" 等，具体路径取决于系统架构和配置。
++ 需要注意的是，由于 linux-vdso.so.1 是在内核启动时动态生成的，因此你不会在文件系统中找到实际的库文件。它在运行时通过内核的机制自动映射到每个进程的地址空间中。
+
+## libcrypto.so
+
++ libcrypto.so 是 OpenSSL 库中的一个动态链接库文件。OpenSSL 是一个开源的加密和安全套接字库，提供了密码学功能和安全通信协议的实现。
++ libcrypto.so 库包含了 OpenSSL 提供的各种加密算法、密码学函数和安全协议的实现。它提供了对对称加密算法（如 AES、DES）、哈希函数（如 SHA、MD5）、公钥加密算法（如 RSA、DSA）、数字签名和证书操作等功能的支持。
++ 通过链接 libcrypto.so，开发人员可以在他们的应用程序中使用 OpenSSL 提供的加密和安全功能。这对于需要进行加密通信、数字签名、证书验证和其他密码学操作的应用程序、网络服务器、安全工具等非常有用。
++ 需要注意的是，libcrypto.so 是 OpenSSL 库的一部分，它是一个开源项目，在多个操作系统和平台上可用。在不同的系统中，libcrypto.so 的具体名称和路径可能会有所不同，但提供的加密和安全功能基本相似。
+
+## ld-linux-armhf.so
+
++ ld-linux-armhf.so 是 ARM 架构上的动态链接器，用于在 ARM 处理器上运行基于动态链接的可执行文件。它是 Linux 系统中的一部分，用于加载和解析可执行文件以及它们所依赖的动态链接库。
++ 动态链接器（linker）是一个系统组件，负责在运行时将可执行文件和动态链接库组合在一起，解决符号引用，建立程序的运行环境，并开始执行程序。
++ ld-linux-armhf.so 针对 ARM 架构上的硬浮点 ABI（Application Binary Interface）进行了优化。它确保可执行文件和动态链接库在 ARM 架构上以正确的方式加载和运行，并与其他系统组件协同工作。
++ 需要注意的是，ld-linux-armhf.so 的名称可能会因操作系统版本、发行版或具体的 ARM 架构变体而有所不同。不同的 ARM 架构和操作系统可能使用不同的链接器名称和路径。
+
+## libpostproc.so
+
++ libpostproc.so 是 FFmpeg 多媒体处理库中的一个动态链接库（shared library）文件。FFmpeg 是一个开源的跨平台多媒体框架，用于处理音频、视频和其他多媒体数据。
++ libpostproc.so 库提供了视频后处理的功能，包括图像滤镜、色彩空间转换、图像调整等。它可以用于在视频处理过程中对图像进行修正、增强和优化，提供更好的视觉效果。
++ 通过链接 libpostproc.so，开发人员可以在他们的应用程序中使用 FFmpeg 提供的视频后处理功能。这对于需要进行视频处理和编辑的应用程序、媒体播放器、转码工具等非常有用。
++ 需要注意的是，libpostproc.so 是 FFmpeg 中的一部分，它是一个开源的项目，因此可以在多个平台上使用。在不同的操作系统和平台上，libpostproc.so 的具体名称和路径可能会有所不同，但提供的视频后处理功能基本相似。
+
+## libdrm.so 
+
++ libdrm.so 是一个常见的动态链接库（shared library）文件，它是 Direct Rendering Manager（DRM）的一部分。DRM 是一个用于在 Linux 系统上管理图形设备的子系统，它提供了与显示服务器、图形驱动程序和用户空间应用程序之间的接口。
++ libdrm.so 库提供了一组函数，用于与 DRM 子系统进行交互和通信。它允许用户空间应用程序通过 DRM 接口与图形设备进行交互，进行诸如显示输出、图形渲染、硬件加速等操作。
++ 通过链接 libdrm.so，开发人员可以编写应用程序来管理图形设备，并利用 DRM 提供的功能，如显示模式设置、缓冲区管理、2D/3D 图形渲染等。
++ 需要注意的是，libdrm.so 是特定于 Linux 系统上的 DRM 子系统的库文件。它是在 DRM 子系统和图形驱动程序之间进行通信的桥梁，提供了对图形设备的访问和控制。在不同的 Linux 发行版和不同的图形硬件上，libdrm.so 的具体实现和用法可能会有所不同。
+
+## libgcc_s.so
+
++ libgcc_s.so 是一个常见的动态链接库（shared library）文件，它是 GCC（GNU Compiler Collection）的运行时支持库之一。"libgcc_s" 代表 "libgcc support"，该库提供了在使用 GCC 编译的程序中所需的一些运行时支持。
++ libgcc_s.so 库提供了一些与编译器相关的支持函数和运行时环境，用于处理一些特定的语言特性、异常处理、类型转换、整数运算等。它通常用于支持编译器生成的一些代码，以提供必要的运行时支持。
++ 在某些情况下，使用 GCC 编译的程序可能依赖于 libgcc_s.so 库。当运行这些程序时，系统会自动加载和链接 libgcc_s.so，以提供所需的运行时支持。这通常是由于程序使用了一些与编译器相关的功能，或者使用了特定的编译选项。
++ 需要注意的是，libgcc_s.so 是特定于 GCC 的库，因此在使用其他编译器或不同版本的 GCC 上编译的程序可能会使用不同的运行时支持库。在不同的操作系统和平台上，libgcc_s.so 的具体名称和路径可能会有所不同，但其目的和功能基本相似。
+
+## libstdc++.so.6
+
++ libstdc++.so 是一个常见的动态链接库（shared library）文件，它是 GNU C++ 标准库（GNU C++ Standard Library）的一部分。"libstdc++" 代表 "Standard C++"，该库提供了 C++ 标准库的实现
++ libstdc++.so 库包含了各种与 C++ 相关的函数和类，如容器（vector、list、map）、算法（sort、find、transform）、输入输出（iostream、fstream）、字符串处理（string、stringstream）等
++ 这个库是 C++ 编程中非常重要的一部分，它提供了 C++ 标准库的实现，包括常用的数据结构、算法、输入输出等功能，为 C++ 开发人员提供了丰富的工具和函数，简化了开发过程
++ 通过链接 libstdc++.so，应用程序可以使用这些标准库函数和类，从而实现各种 C++ 编程任务，如数据结构操作、算法实现、文件读写、字符串处理等
++ 需要注意的是，libstdc++.so 是在许多操作系统中的标准 C++ 库，包括 Linux、Unix 和类 Unix 系统。在不同的操作系统和平台上，libstdc++.so 的名称和具体实现可能会有所不同，但提供的标准库函数和用法基本上是相似的
+
+
+## libc.so.6
+
++ libc.so 是一个常见的动态链接库（shared library）文件，它是 C 语言标准库（C Standard Library）的一部分。"libc" 代表 "C"，该库提供了一系列 C 语言的标准函数和常用工具函数的实现
++ libc.so 库包含了各种常用的函数，例如内存操作函数（如malloc、free、memcpy、memset）、字符串操作函数（如strcpy、strcat、strlen）、文件操作函数（如fopen、fclose、fread、fwrite）、数学函数（如abs、sqrt、sin、cos）等
++ 这个库是 C 语言编程中非常重要的一部分，它提供了许多基础的函数和工具，可以帮助开发人员进行内存管理、字符串处理、文件操作、数学计算等各种常见的任务。通过链接 libc.so，应用程序可以使用这些函数，从而简化了代码的编写和开发过程
++ 需要注意的是，libc.so 是在许多操作系统中的标准 C 库，包括 Linux、Unix 和类 Unix 系统。在不同的操作系统和平台上，libc.so 的名称和具体实现可能会有所不同，但提供的标准函数和用法基本上是相似的
+
+## libm.so.6
+
++ libm.so 是一个常见的动态链接库（shared library）文件，它是数学库（Math Library）的一部分。"libm" 代表 "Math"，该库提供了许多数学函数的实现，供应用程序在运行时使用。
++ libm.so 库通常用于执行各种数学操作，例如三角函数、指数函数、对数函数、幂函数等。它包含了标准的数学函数库，使开发人员能够在程序中进行高级数学计算和操作，无需自己实现这些函数
++ 该库提供的函数包括但不限于：sin、cos、tan、exp、log、pow、sqrt 等。通过链接 libm.so，应用程序可以调用这些函数来执行各种数学运算，从而简化了数学计算的实现过程。
++ 需要注意的是，libm.so 是在许多操作系统中标准的数学库，包括 Linux、Unix 和类 Unix 系统。在不同的操作系统和平台上，libm.so 的名称和具体实现可能会有所不同，但提供的数学函数和用法基本上是相似的
+
+## libdl.so 动态加载共享库
+
++ libdl.so 是一个动态链接库（shared library）文件，它是 Linux 操作系统中的一部分。"libdl" 代表 "Dynamic Loading"，该库提供了在运行时动态加载其他共享库的功能。在 Linux 系统中，动态链接库可以在程序执行过程中被加载和卸载，这样可以提供更灵活的代码组织和模块化开发的方式
++ libdl.so 库通常由应用程序使用，用于在运行时动态加载其他共享库。它提供了一组函数，例如 `dlopen()`、`dlsym()`、`dlclose()` 等，用于加载、查找和卸载其他库中的符号（函数、变量等）。这些函数可以让程序在运行时根据需要加载所需的库，并调用其中的函数或访问其中的变量。
++ 通过 libdl.so，程序可以实现插件化架构、动态加载模块、实现扩展性等。这对于一些需要在运行时动态加载功能的程序，如插件系统、动态链接器、动态加载器等，非常有用
++ 需要注意的是，libdl.so 是 Linux 系统中的库文件，而在其他操作系统中，类似的功能可能由其他库提供，而命名可能也有所不同
+
+`libdl.so`是Linux系统上的动态链接库，它提供了动态加载和管理共享库的功能。与之对应的头文件是`dlfcn.h`，它包含了在使用`libdl.so`库时需要的函数和宏的声明。
+
+以下是`dlfcn.h`头文件的常见函数和宏：
+
+1. `dlopen`函数：
+   ```cpp
+   void* dlopen(const char* filename, int flags);
+   ```
+该函数用于打开一个共享库文件，并返回一个指向库句柄的指针。`filename`参数是共享库文件的路径，`flags`参数指定了打开库的方式，如`RTLD_LAZY`表示在需要时才解析符号，`RTLD_NOW`表示立即解析符号等。
+
+1. `dlsym`函数：
+   ```cpp
+   void* dlsym(void* handle, const char* symbol);
+   ```
+该函数用于在打开的库中查找指定的符号，并返回符号对应的地址。`handle`参数是由`dlopen`返回的库句柄，`symbol`参数是要查找的符号的名称。
+
+1. `dlclose`函数：
+   ```cpp
+   int dlclose(void* handle);
+   ```
+该函数用于关闭打开的库。`handle`参数是要关闭的库的句柄。
+
+1. `dlerror`函数：
+   ```cpp
+   char* dlerror();
+   ```
+该函数返回上一个动态库函数调用的错误信息。如果没有错误发生，则返回`NULL`。
+
+上述函数和宏的声明都可以在`dlfcn.h`头文件中找到。为了使用这些函数和宏，需要在C/C++源文件中包含`dlfcn.h`头文件：
+   ```cpp
+   #include <dlfcn.h>
+   ```
+
+这样，你就可以使用`libdl.so`库提供的动态加载和管理共享库的功能了。请注意，这些函数和宏在不同的操作系统和平台上可能会有所差异，因此在编写跨平台代码时需要注意相关的兼容性问题。
 
 ## 错误码
 
@@ -490,7 +598,7 @@
 
 + 简述：描述通用套接字地址的结构
 + 声明：
-  ```
+  ```c
     struct sockaddr
       {
         __SOCKADDR_COMMON (sa_);	/* Common data: address family and length.  地址族 */
@@ -507,7 +615,7 @@
 
 + 简述：描述因特网套接字地址的结构
 + 声明：
-  ```
+  ```c
     struct sockaddr_in
       {
         __SOCKADDR_COMMON (sin_);   /* Address Family.   地址族 */
@@ -525,7 +633,7 @@
   + 结构体用来处理网络通信的地址。
   + 该结构体解决了sockaddr的缺陷，把port和addr 分开储存在两个变量中
   + 该结构体中提到的另一个结构体in_addr定义如下
-     ```
+     ```c
         /* Internet address.  */
         typedef uint32_t in_addr_t;
         struct in_addr
