--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,29 @@
 # 概述 -- 理论基础知识
 
+## C++ 插件
+
+C++ 插件是指使用 C++ 编程语言编写的可扩展模块，它们可以被动态加载到应用程序中，以增加或修改应用程序的功能。插件通常是独立的动态链接库（DLL）或共享对象（SO）文件，它们与应用程序分离，可以在运行时进行加载和卸载。
+
+C++ 插件在软件开发中具有许多应用，例如：
+
+1. 扩展功能：通过加载插件，应用程序可以动态添加新功能，而无需重新编译和部署整个应用程序。这使得应用程序更加灵活和可扩展。
+
+2. 定制化和配置：插件可以用于提供不同的定制化选项或配置方案。用户可以根据自己的需求选择和加载适当的插件，以满足其特定的要求。
+
+3. 外部模块集成：插件可以用于集成第三方库、组件或模块到应用程序中。这使得应用程序能够利用外部库的功能，提高开发效率和功能丰富性。
+
+编写 C++ 插件涉及以下步骤：
+
+1. 定义插件接口：确定插件的功能和提供的接口，包括函数、类和数据结构等。
+
+2. 实现插件功能：使用 C++ 编程语言编写插件的具体实现。这可以包括编写插件的功能代码、算法、数据处理等。
+
+3. 封装为动态链接库：将插件代码编译为动态链接库，例如在 Linux 上生成共享对象（SO）文件，在 Windows 上生成动态链接库（DLL）文件。
+
+4. 加载和使用插件：应用程序通过动态加载机制加载插件，并使用插件提供的功能。这可以通过使用操作系统提供的动态加载库、插件管理器或框架来实现。
+
+需要注意的是，C++ 插件的开发和使用可以因操作系统、编程语言和框架而异。具体的插件开发流程和使用方式可能会因你所使用的技术栈和环境而有所不同。
+
 ## 函数对象
 
 + 可以重载类中的函数调用运算符，以便用类的对象代替函数指针。这些对象称为函数对象，或者简称仿函数
@@ -35,7 +59,7 @@
   + 第一个参数是整型，可以获得包括程序名字的参数个数
   + 第二个参数是字符数组指针或字符指针的指针，可以按顺序获得命令行上各个字符串参数。
 + 其原形是：
-  ```
+  ```c
     int main(int argc, char *argv[]);
     //或者
     int main(int argc, char **argv);
@@ -129,7 +153,7 @@
 
 + 一个位域必须存储在同一个字节中，不能跨两个字节，故位域的长度不能大于一个字节的长度
 + 如一个字节所剩空间不够存放另一位域时，应从下一单元起存放该位域。也可以有意使某位域从下一单元开始。例如：
-  ```
+  ```c
     struct BitField {
       unsigned int a:4;  //占用4个二进制位;
       unsigned int  :0;  //空位域,自动置0;
@@ -146,7 +170,7 @@
 + 位域字段不能是类的静态成员;
 
 + 位域字段在内存中的位置是按照从低位向高位的顺序放置的;
-  ```
+  ```c
     struct BitField {
       unsigned char a:2;  //最低位;
       unsigned char b:3;
@@ -168,7 +192,7 @@
   + 中间位是b:000
   + 最低位是a:000;
 + 所以,这个位域结构中的8二进制内容就是: 00100000,总共8个位,其十进制格式就是32;实际上打印出来的ubf.n值就是32;
-  ```
+  ```c
     ubf.n = 100; //二进制为: 01100100
 
     printf("ubf.bf.a = %d, ubf.bf.b = %d, ubf.bf.c = %d\n", ubf.bf.a, ubf.bf.b, ubf.bf.c);
@@ -185,7 +209,7 @@
   + 如果相邻的两个位域字段的类型不同,则各个编译器的具体实现有差异,VC6采取不压缩方式,GCC和Dev-C++都采用压缩方式;
   + 整个结构体的总大小为最宽基本类型成员大小的整数倍
   + 如果位域字段之间穿插着非位域字段，则不进行压缩；（不针对所有的编译器）
-  ```
+  ```c
     struct BFA {
       unsigned char a:2;
       unsigned char b:3;
@@ -209,7 +233,7 @@
 ### 1.1 详解
 
 + 示例：
-  ```
+  ```c++
     #include <iostream>
 
     using namespace std;
@@ -290,7 +314,7 @@
 + `std::shared_ptr` 是一种智能指针，它能够记录多少个 shared_ptr 共同指向一个对象，从而消除显式的调用 delete，当引用计数变为零的时候就会将对象自动删除。但还不够，因为使用 `std::shared_ptr` 仍然需要使用 new 来调用，这使得代码出现了某种程度上的不对称。
 + `std::make_shared` 就能够用来消除显式的使用 new，所以 `std::make_shared` 会分配创建传入参数中的对象， 并返回这个对象类型的 `std::shared_ptr` 指针
 + 例如：
-  ```
+  ```c++
     #include <iostream>
     #include <memory>
     void foo(std::shared_ptr<int> i) {
@@ -312,12 +336,12 @@
 ### std::unique_str
 
 + `std::unique_ptr` 是一种独占的智能指针，它禁止其他智能指针与其共享同一个对象，从而保证代码的安全：
-  ```
+  ```c++
     std::unique_ptr<int> pointer = std::make_unique<int>(10); // make_unique 从 C++14 引入
     std::unique_ptr<int> pointer2 = pointer; // 非法
   ``` 
 + make_unique 并不复杂，C++11 没有提供 std::make_unique，可以自行实现：
-  ```
+  ```c++
     template<typename T, typename ...Args>
     std::unique_ptr<T> make_unique( Args&& ...args ) {
       return std::unique_ptr<T>( new T( std::forward<Args>(args)... ) );
@@ -326,7 +350,7 @@
 
 + 既然是独占，换句话说就是不可复制。但是，我们可以利用 `std::move` 将其转移给其他的 `unique_ptr`
 + 例如：
-  ```
+  ```c++
     #include <iostream>
     #include <memory>
 
@@ -366,7 +390,7 @@
 ### std::weak_ptr
 
 + 如果你仔细思考 `std::shared_ptr` 就会发现依然存在着资源无法释放的问题。看下面这个例子：
-  ```
+  ```c++
     struct A;
     struct B;
 
@@ -414,7 +438,7 @@
 + `__sync_fetch_and_add`，顾名思义，先fetch，然后自加，返回的是自加之前的数值。
   + 以`count = 4`为例，调用`__sync_fetch_and_add(&count, 1)`之后，返回值是4，然后，count变成了5
 + 全部函数：
-  ```
+  ```c++
     type __sync_fetch_and_add (type *ptr, type value);
     type __sync_fetch_and_sub (type *ptr, type value);
     type __sync_fetch_and_or (type *ptr, type value);
@@ -765,7 +789,7 @@
 
 + 函数回调是将一个函数作为参数传递给另一个函数，并在接收函数稍后的时间调用该函数。您可以将 lambda 作为函数参数传递，其中它将在发生某个事件时执行。
 + 示例：
-  ```
+  ```c++
     #include <iostream>
     #include <algorithm>
     #include <vector>
@@ -784,7 +808,7 @@
 
 + 当一个 lambda 表达式被声明时没有任何显式的捕获，其默认行为是通过引用捕获周围作用域中的变量。这被称为默认捕获。
 + 示例：
-  ```
+  ```c++
     #include <iostream>
 
     int main()
@@ -799,7 +823,7 @@
 
 + 这是 lambda 表达式的最简单形式，其中你通过值传递变量给函数。当一个变量被按值捕获时，它的当前值被存储在闭包中，而当周围作用域中的变量发生改变时，它的值不会被更新。这可以通过将变量包含在方括号 [ ] 中来实现。
 + 示例：
-  ```
+  ```c++
     #include <iostream>
 
     int main() {
@@ -814,7 +838,7 @@
 
 + 你可以通过使用 & 符号将变量传递给 lambda 表达式来按引用捕获变量。当一个变量被按引用捕获时，它的当前值被存储在闭包中，并且在周围作用域中变量发生变化时被更新。这是通过在方括号[ ]中在变量前加上取地址运算符 & 来实现的。
 + 示例：
-  ```
+  ```c++
     #include <iostream>
 
     int main() {
@@ -829,7 +853,7 @@
 
 + 默认情况下，由 lambda 表达式捕获的变量是常量，不能在 lambda 表达式体内修改。如果你想要在 lambda 表达式中修改捕获的变量，你可以将 lambda 表达式设为可变。可变lambda允许捕获的变量被修改。这是通过在方括号 [ ] 中包含可变关键字来实现的。
 + 示例：
-  ```
+  ```c++
     #include <iostream>
 
     int main() {
@@ -905,7 +929,7 @@
 ## override 重载
 
 + 当在父类中使用了虚函数的时候，可能需要在某个子类中对这个虚函数进行重写，以下方法都可以：
-  ```
+  ```c++
     class A
     {
         virtual void foo();
@@ -921,7 +945,7 @@
 
 + 如果不适用 override， 当把`foo()`写成`foO()`时，编译器并不会报错，因为它并不知道你的目的是重写虚函数，而是把它当成了新的函数。如果这个函数很重要的话，那就会对整个程序不利
 + 所以，override的作用就出来了： 它指定了子类的这个虚函数是重写的父类的。如果名字不小心打错了，编译器是不会编译通过的，例如：
-  ```
+  ```c++
     class A
     {
         virtual void foo();
@@ -941,7 +965,7 @@
 + 当不希望某个类被继承，或者不希望某个虚函数被重写，可以在类名和虚函数后添加`final`关键字。
 + 添加`final`关键字后被继承或重写，编译器会报错
 + 示例
-  ```
+  ```c++
     class Base
     {
         virtual void foo();
@@ -1121,7 +1145,7 @@
   + 一个程序运行时，所有和运行相关的物件都是需要加载到内存中，这就决定了程序运行时的任何物件都可以用指针来指向它。
   + 函数是存放在内存代码区域内的，它们同样有地址，因此同样可以用指针来存取函数，把这种**指向函数入口地址的指针**称为函数指针
 
-```
+```c++
   void Invoke(char* s);
 
   int main()
@@ -1143,7 +1167,7 @@
   + 注意，函数指针必须用括号括起来 `void (*fp)(char* s)`
 
 + 实际中，为了方便，通常用宏定义的方式来声明函数指针，实现程序如下：
-  ```
+  ```c++
     typedef void (*FP)(char* s);
     void Invoke(char* s);
 
@@ -1169,7 +1193,7 @@
 
 + 示例：
   + 标准Hello World程序：
-    ```
+    ```c++
       int main(int argc,char* argv[])
       {
           printf("Hello World!\n");
@@ -1177,7 +1201,7 @@
       }
     ``` 
   + 将它修改成函数回调样式：
-    ```
+    ```c++
       //定义回调函数
       void PrintfText() 
       {
@@ -1198,7 +1222,7 @@
       }
     ```
   + 修改成带参的回调样式：
-    ```
+    ```c++
       //定义带参回调函数
       void PrintfText(char* s) 
       {
@@ -1238,20 +1262,20 @@
 + 上述的两种方式都可以将变量a初始化为0
 
 + 当对内置类型使用列表初始化时，若初始值存在丢失的风险，编译将报错，如：
-  ```
+  ```c++
     int a = 3.14;   // 正确，虽然会丢失小数部分，但是编译器不报错。
     int a = {3.14}; // 错误，因为将会丢失小数部分（其实，g++只是对此提示警告而已，并非错误）。
   ``` 
 
 + 由花括号括起来的初始值，不仅可以用于初始化变量，还可以用于为对象（旧变量）赋新值。
-  ```
+  ```c++
     int a = 1;   // 定义变量，并且初始化为1
     a = {3};     // 为变量a赋新值3
   ``` 
 
 + 用处：
   + 可以用在任何需要变量初始化的地方，例如第6章的类成员初始化，以及在for()中定义的变量：
-    ```
+    ```c++
       for (int i{0}; i < 10; i++) {
       ...
       }
@@ -1261,7 +1285,7 @@
 
 + 如果使用等号初始化一个变量，实际上执行的是拷贝初始化(copy initialization)，编译器把等号右侧的初始值拷贝到新创建的对象中去
 + 示例：
-  ```
+  ```c++
     string s1;       // 默认初始化为空字符串
     string s2 = s1;  // 拷贝初始化，s2是s1的副本
   ``` 
@@ -1269,7 +1293,7 @@
 ### 1.4 直接初始化
 
 + 如果在新创建的变量右侧使用括号将初始值括住（不用等号），则执行的是直接初始化（direct initialization）
-  ```
+  ```c++
     string s1();        // 直接初始化为空字符串 
     string s2("hi");    // 直接初始化
     string s3(3, 'c');  // 直接初始化，s2的内容是ccc
@@ -1318,7 +1342,7 @@
 
 + 由于C++标准库中I/O类对<<操作符重载，因此在遇到字符型指针时会将其当作字符串名来处理，输出指针所指的字符串。
 + 既然这样，那么我们就别让它知道那是字符型指针，所以得用到强制类型转换，不过不是C的那套，我们得用static_cast来实现，把字符串指针转换成无类型指针，这样更规范，如下：
-  ```
+  ```c++
     #include <iostream>
 
     int main()
