--- a/Grandhonor/rk_工地盒子/1-1_业务整理.md
+++ b/Grandhonor/rk_工地盒子/1-1_业务整理.md
@@ -73,3 +73,218 @@
 
 + 推论一
   + 类似于比特大陆盒子上的设置任务有效时间，只不过这个启动和停止是任务方面的，到时间了启动任务，超过了时间段，就停止任务，第二天同一时间再启动和停止任务
+
+### web后端
+
++ 环境
+  ```
+    root@RV1126_RV1109:/usr/local/bin# ls
+    node_srv
+    root@RV1126_RV1109:/usr/local/bin# ldd node_srv 
+    	linux-vdso.so.1 (0xaefd4000)
+    	libgddi_codec.so.1 => /usr/local/lib/libgddi_codec.so.1 (0xa6a63000)
+    	libavcodec.so.58 => /usr/local/lib/libavcodec.so.58 (0xa5be1000)
+    	libavformat.so.58 => /usr/local/lib/libavformat.so.58 (0xa5a27000)
+    	libavutil.so.56 => /usr/local/lib/libavutil.so.56 (0xa578f000)
+    	libswscale.so.5 => /usr/local/lib/libswscale.so.5 (0xa572f000)
+    	libgddi_rockchip_sdk.so.20 => /usr/local/lib/libgddi_rockchip_sdk.so.20 (0xa5511000)
+    	librga.so => /usr/local/lib/librga.so (0xa54ec000)
+    	librockchip_mpp.so.1 => /usr/local/lib/librockchip_mpp.so.1 (0xa53b5000)
+    	libgddi_post.so.1 => /usr/local/lib/libgddi_post.so.1 (0xa52fe000)
+    	libopencv_calib3d.so.4.4 => /usr/local/lib/libopencv_calib3d.so.4.4 (0xa51f1000)
+    	libopencv_videoio.so.4.4 => /usr/local/lib/libopencv_videoio.so.4.4 (0xa51a0000)
+    	libopencv_imgcodecs.so.4.4 => /usr/local/lib/libopencv_imgcodecs.so.4.4 (0xa5057000)
+    	libopencv_imgproc.so.4.4 => /usr/local/lib/libopencv_imgproc.so.4.4 (0xa4d9c000)
+    	libopencv_core.so.4.4 => /usr/local/lib/libopencv_core.so.4.4 (0xa4b79000)
+    	librt.so.1 => /lib/arm-linux-gnueabihf/librt.so.1 (0xa4b63000)
+    	libpthread.so.0 => /lib/arm-linux-gnueabihf/libpthread.so.0 (0xa4b3d000)
+    	libstdc++.so.6 => /lib/arm-linux-gnueabihf/libstdc++.so.6 (0xa49f4000)
+    	libm.so.6 => /lib/arm-linux-gnueabihf/libm.so.6 (0xa498b000)
+    	libc.so.6 => /lib/arm-linux-gnueabihf/libc.so.6 (0xa488c000)
+    	/lib/ld-linux-armhf.so.3 (0xa6eee000)
+    	libgcc_s.so.1 => /lib/arm-linux-gnueabihf/libgcc_s.so.1 (0xa4863000)
+    	libavfilter.so.7 => /usr/local/lib/libavfilter.so.7 (0xa45e9000)
+    	libswresample.so.3 => /usr/local/lib/libswresample.so.3 (0xa45c9000)
+    	libdrm.so.2 => /usr/local/lib/libdrm.so.2 (0xa45ae000)
+    	librknn_api.so => /usr/local/lib/librknn_api.so (0xa459c000)
+    	libopencv_features2d.so.4.4 => /usr/local/lib/libopencv_features2d.so.4.4 (0xa4513000)
+    	libopencv_flann.so.4.4 => /usr/local/lib/libopencv_flann.so.4.4 (0xa44cd000)
+    	libdl.so.2 => /lib/arm-linux-gnueabihf/libdl.so.2 (0xa44ba000)
+    	libpostproc.so.55 => /usr/local/lib/libpostproc.so.55 (0xa44a1000)
+  ``` 
+
++ C 动态库
+  + libpthread
+  + libm
+  + libc
+  + libgcc_s
+  + libdrm
+  + libdl
+
++ C++ 动态库
+  + libstdc++
+
++ FFmpeg 动态库
+  + libavcodec
+  + libavformat
+  + libavutil
+  + libswscale
+  + libavfilter
+  + libswresample
+  + libpostproc
+
++ OpenCV 动态库
+  + libopencv_calib3d
+  + libopencv_videoio
+  + libopencv_imgcodecs
+  + libopencv_imgproc
+  + libopencv_core
+  + libopencv_features2d
+  + libopencv_flann
+
++ rk 动态库
+  + librga
+  + librt
+  + librknn_api
+
++ rockchip 动态库
+  + libgddi_codec
+  + librockchip_mpp
+  + libgddi_rockchip_sdk
+  + libgddi_post
+
++ rockchip 动态库详细信息 ldd -v node_srv
+  ```
+  	/usr/local/lib/libgddi_codec.so.1:
+  		libswscale.so.5 (LIBSWSCALE_5) => /usr/local/lib/libswscale.so.5
+  		libavformat.so.58 (LIBAVFORMAT_58) => /usr/local/lib/libavformat.so.58
+  		ld-linux-armhf.so.3 (GLIBC_2.4) => /lib/ld-linux-armhf.so.3
+  		libavfilter.so.7 (LIBAVFILTER_7) => /usr/local/lib/libavfilter.so.7
+  		libavcodec.so.58 (LIBAVCODEC_58) => /usr/local/lib/libavcodec.so.58
+  		libavutil.so.56 (LIBAVUTIL_56) => /usr/local/lib/libavutil.so.56
+  		libgcc_s.so.1 (GCC_3.4) => /lib/arm-linux-gnueabihf/libgcc_s.so.1
+  		libgcc_s.so.1 (GCC_3.5) => /lib/arm-linux-gnueabihf/libgcc_s.so.1
+  		libc.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.15) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.18) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.5) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.9) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.21) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.14) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.11) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_ARM_1.3.3) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.22) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.19) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  ``` 
+  ```
+  	/usr/local/lib/libgddi_rockchip_sdk.so.20:
+  		libm.so.6 (GLIBC_2.27) => /lib/arm-linux-gnueabihf/libm.so.6
+  		libm.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libm.so.6
+  		ld-linux-armhf.so.3 (GLIBC_2.4) => /lib/ld-linux-armhf.so.3
+  		libgcc_s.so.1 (GCC_3.5) => /lib/arm-linux-gnueabihf/libgcc_s.so.1
+  		libpthread.so.0 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libpthread.so.0
+  		libstdc++.so.6 (GLIBCXX_3.4.20) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.8) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.1) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.9) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.9) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.11) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.14) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.21) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_ARM_1.3.3) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.22) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.15) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libc.so.6 (GLIBC_2.16) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.15) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.7) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.17) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.11) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.25) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libc.so.6
+  ```
+  ```
+  	/usr/local/lib/librockchip_mpp.so.1:
+  		libgcc_s.so.1 (GCC_3.5) => /lib/arm-linux-gnueabihf/libgcc_s.so.1
+  		libpthread.so.0 (GLIBC_2.12) => /lib/arm-linux-gnueabihf/libpthread.so.0
+  		libpthread.so.0 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libpthread.so.0
+  		libm.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libm.so.6
+  		libm.so.6 (GLIBC_2.15) => /lib/arm-linux-gnueabihf/libm.so.6
+  		libc.so.6 (GLIBC_2.8) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.28) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.17) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libc.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libc.so.6
+  ```
+  ```
+  	/usr/local/lib/libgddi_post.so.1:
+  		ld-linux-armhf.so.3 (GLIBC_2.4) => /lib/ld-linux-armhf.so.3
+  		libm.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libm.so.6
+  		libgcc_s.so.1 (GCC_3.4) => /lib/arm-linux-gnueabihf/libgcc_s.so.1
+  		libgcc_s.so.1 (GCC_3.5) => /lib/arm-linux-gnueabihf/libgcc_s.so.1
+  		libc.so.6 (GLIBC_2.4) => /lib/arm-linux-gnueabihf/libc.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.15) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.8) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.9) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.18) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.5) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.9) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.21) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.14) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.11) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3.11) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_ARM_1.3.3) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.22) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4.19) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (GLIBCXX_3.4) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  		libstdc++.so.6 (CXXABI_1.3) => /lib/arm-linux-gnueabihf/libstdc++.so.6
+  ```
+
+
++ 推论一
+  + libgddi_codec，视频解码部分
+  + librockchip_mpp,媒体处理部分
+  + libgddi_rockchip_sdk，推理部分
+  + libgddi_post，web后端
+
+### MediaServer
+
++ 环境
+  + 盒子中路径为 `/proc/1860/cwd/`
+  + docker 容器名称为 zl ，路径为 `/zlmediakit/`
+
++ ldd MediaServer
+  ```
+    [root@RV1126_RV1109:/proc/1860]# docker exec -it zl bash 
+    root@ad140a93bf2b:/zlmediakit# ldd MediaServer 
+    	linux-vdso.so.1 (0xaefd6000)
+    	libpthread.so.0 => /lib/arm-linux-gnueabihf/libpthread.so.0 (0xa6b57000)
+    	libssl.so.1.1 => /lib/arm-linux-gnueabihf/libssl.so.1.1 (0xa6af3000)
+    	libcrypto.so.1.1 => /lib/arm-linux-gnueabihf/libcrypto.so.1.1 (0xa6945000)
+    	libstdc++.so.6 => /lib/arm-linux-gnueabihf/libstdc++.so.6 (0xa67fc000)
+    	libm.so.6 => /lib/arm-linux-gnueabihf/libm.so.6 (0xa6793000)
+    	libgcc_s.so.1 => /lib/arm-linux-gnueabihf/libgcc_s.so.1 (0xa676a000)
+    	libc.so.6 => /lib/arm-linux-gnueabihf/libc.so.6 (0xa666b000)
+    	/lib/ld-linux-armhf.so.3 (0xa6f8e000)
+    	libdl.so.2 => /lib/arm-linux-gnueabihf/libdl.so.2 (0xa6658000)
+  ``` 
+
++ `cwd/config.ini` 
+  + 有一些关于http的配置
+
+## 任务-业务-小结(20230522)
+
++ web后端，业务逻辑，认为都是使用C++写的，没有调用第三方动态库库，有使用一些第三方开源库的代码，例如日志使用了spdlog，其他功能使用了boost库
++ 任务管理方面
+  + 持续运行，一个任务绑定一个算法，启动即运行
+  + 轮询，一个任务绑定多个算法，至少两个算法，为每个算法设置运行时长，每个算法依次工作各自时长，循环工作
+  + 阶段运行，一个任务可以绑定多个算法，也可以是一个算法，并配置算法运行启动时间和运行停止时间，多个算法的时间段不可重叠
+
+## 业务分析
+
+### 区域配置
+
++ 现象
+  + 工地盒子配置了区域，检测目标在该区域内，才有检测框
