工厂盒子,管理节点模块开发ing

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,29 @@
 # 概述 -- 理论基础知识
 
+## C++项目开发结构
+
+在C++项目开发中，第三方源代码通常会被放置在项目的特定目录中，以便管理和使用。常见的做法是在项目根目录下创建一个名为 "third_party" 或 "external" 的目录，用于存放第三方源代码。
+
+项目结构示例：
+```
+- project/
+  - src/       // 项目源代码目录
+  - include/   // 项目头文件目录
+  - lib/       // 项目库文件目录
+  - bin/       // 项目可执行文件目录
+  - test/      // 单元测试目录
+  - third_party/   // 第三方源代码目录
+    - library1/    // 第三方库1
+    - library2/    // 第三方库2
+    - ...
+```
+
+在第三方源代码目录中，可以进一步按照每个第三方库的名称创建子目录，并将该库的源代码、头文件、编译配置等放置在相应的目录下。这样可以将第三方代码与项目的自有代码进行分离，使项目结构更加清晰，并方便进行管理和维护。
+
+当你引用第三方库时，可以根据需要进行编译、链接或包含相应的源代码、头文件和库文件。具体的操作步骤和配置可能因项目构建系统的不同而有所差异。一般来说，你需要在项目的构建脚本或配置文件中指定第三方库的路径和相关编译选项，以确保能够正确地使用第三方库。
+
+需要注意的是，当使用第三方库时，你可能需要遵循该库的许可证要求，并遵守相应的开源许可协议。在使用和分发第三方代码之前，请务必仔细阅读和理解相应的许可条款。
+
 ## C++ 插件
 
 C++ 插件是指使用 C++ 编程语言编写的可扩展模块，它们可以被动态加载到应用程序中，以增加或修改应用程序的功能。插件通常是独立的动态链接库（DLL）或共享对象（SO）文件，它们与应用程序分离，可以在运行时进行加载和卸载。
