--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,57 @@
 ## C/C++ 常用编程技巧
 
+### std::function 与 函数指针 互换
+
+在某些情况下，我们可能需要将 `std::function` 对象转换为函数指针，或者将函数指针转换为 `std::function` 对象。虽然直接的互相转换是不可行的，但可以通过一些技巧来实现类似的效果。
+
+将 `std::function` 转换为函数指针可以使用 `std::function` 的 `target` 成员函数和函数指针类型的静态转换来实现。下面是一个示例：
+
+```cpp
+#include <iostream>
+#include <functional>
+
+void foo(int x) {
+    std::cout << "foo: " << x << std::endl;
+}
+
+int main() {
+    std::function<void(int)> func = foo;  // 将函数指针赋值给 std::function 对象
+    void (*funcPtr)(int) = static_cast<void (*)(int)>(func.target<void(*)(int)>());
+
+    if (funcPtr != nullptr) {
+        funcPtr(42);  // 调用函数指针，等同于调用 foo 函数
+    }
+
+    return 0;
+}
+```
+
+在上面的示例中，我们首先将函数 `foo` 赋值给 `std::function<void(int)>` 对象 `func`。然后，我们使用 `func.target<void(*)(int)>()` 来获取函数指针类型的目标对象，并使用静态转换将其赋值给函数指针变量 `funcPtr`。通过调用 `funcPtr(42)`，我们实际上调用了函数 `foo`。
+
+将函数指针转换为 `std::function` 对象可以使用 `std::function` 的构造函数来实现。下面是一个示例：
+
+```cpp
+#include <iostream>
+#include <functional>
+
+void foo(int x) {
+    std::cout << "foo: " << x << std::endl;
+}
+
+int main() {
+    void (*funcPtr)(int) = foo;  // 函数指针
+    std::function<void(int)> func(funcPtr);  // 将函数指针转换为 std::function 对象
+
+    func(42);  // 调用 std::function 对象，等同于调用 foo 函数
+
+    return 0;
+}
+```
+
+在上面的示例中，我们首先定义了一个函数指针 `funcPtr` 并将其初始化为函数 `foo`。然后，我们使用 `std::function<void(int)>` 的构造函数将函数指针转换为 `std::function` 对象 `func`。通过调用 `func(42)`，我们实际上调用了函数 `foo`。
+
+需要注意的是，函数指针和 `std::function` 对象之间的转换可能会丢失某些功能或引入性能开销，因为它们在实现和语义上是不同的。因此，在进行这种转换时，需要仔细考虑相关的设计和性能问题。
+
 ### 链接静态库顺序问题
 
 + 默认情况下要求被依赖的库放在依赖它的库后面，当一个程序或共享库依赖的静态库较多时，可能会陷入解决链接问题的坑中
