--- a/Grandhonor/rk_工地盒子/1-2_软件设计.md
+++ b/Grandhonor/rk_工地盒子/1-2_软件设计.md
@@ -26,16 +26,30 @@
   + 事件：任务名称，摄像头名称，算法名称，标记状态，事件时间
   + 盒子信息：盒子名称，设备型号，注册状态，序列号，软件版本，设备状态，系统时间，网络设置
 
-+ JSON数据处理 -- libjsoncpp
++ JSON数据处理 -- nlohmann/json
   + 接收vca输出的 frame.json
 
 ## 框架
 
 ### 管理节点
 
-+ 使用sqlite3
++ 设计思路：
+  + 使用sqlite3持久化存储数据
+
++ 需要存储的数据
+  + 摄像头：名称，流地址
+  + 算法数据：算法名，文件路径
+  + 任务：名称，配置信息
+  + 事件：任务名称，摄像头名称，算法名称，标记状态，事件时间
+  + 盒子信息：盒子名称，设备型号，注册状态，序列号，软件版本，设备状态，系统时间，网络设置 
 
 ### 算力节点
+
++ 设计思路
+  + 告警数据，被动获取：
+    + 接收vca输出的结构化信息，通过业务模块处理，生成告警数据，存放在队列中
+    + 这个队列大小固定，最新的告警数据从队尾放入，外面取告警数据从队头取
+    + 如果从队尾存放最新的告警数据时，队列已满，则从队头删除最旧的告警数据，同时从队尾插入最新的告警数据
 
 + 业务流程：
   + 判断检测框的大小，筛掉小于指定大小的检测框
@@ -46,6 +60,9 @@
   + 判断检测框是否在指定区域内
     + 默认为全屏，若用户画区域，则接收前端传过来的区域点信息
     + 通过 射线法 判断检测框是否在区域内，如果在该区域，则生成告警信息；否则，丢弃
+
++ 区域判断
+  + 射线法，具体思路在CPP的常用算法中有详细记录
 
 + 四层判断
   + 检测框的类别是否与用户设置的检测算法一致
