--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,39 @@
 ## C/C++ 常用编程技巧
 
+### 异常捕获
+
+在C++中，您可以使用多个`catch`块来捕获不同类型的异常，并采取相应的处理措施。每个`catch`块可以捕获一个特定类型的异常，并执行相应的代码块。
+
+下面是一个示例，展示了如何在C++中使用多个`catch`块：
+
+```cpp
+try {
+    // 可能引发异常的代码
+    // ...
+}
+catch (ExceptionType1& ex) {
+    // 处理 ExceptionType1 类型的异常
+    // ...
+}
+catch (ExceptionType2& ex) {
+    // 处理 ExceptionType2 类型的异常
+    // ...
+}
+catch (...) {
+    // 处理其他类型的异常
+    // ...
+}
+```
+
+在上述示例中，`try`块中的代码可能会引发异常。如果发生异常，程序会尝试与每个`catch`块中的异常类型进行匹配。如果匹配成功，则会执行对应的`catch`块中的代码。如果没有找到匹配的`catch`块，则异常会继续传播到上一级的`try`块或最终导致程序终止。
+
+请注意以下几点：
+  1. `catch`块中的异常类型应该与实际可能引发的异常类型匹配。可以使用具体的异常类类型（如`ExceptionType1`、`ExceptionType2`）或其基类来捕获相关异常。
+  2. `catch (...)`是一个特殊的`catch`块，用于捕获所有类型的异常。它可以用作最后一个`catch`块，以处理未被前面的`catch`块捕获的异常。但是，请谨慎使用它，因为它会捕获所有异常，包括标准库和其他代码中可能引发的异常，这可能会导致不可预测的行为。
+  3. 捕获异常时，可以访问异常对象并执行适当的处理操作，如打印错误消息、记录日志、回滚操作等。
+  4. 可以根据需要嵌套使用`try-catch`块，以处理更复杂的异常情况。
+需要注意的是，异常处理应该根据实际需求进行适当的设计，并遵循良好的异常处理原则，以确保程序的可靠性和稳定性。
+
 ### std::function 与 函数指针 互换
 
 在某些情况下，我们可能需要将 `std::function` 对象转换为函数指针，或者将函数指针转换为 `std::function` 对象。虽然直接的互相转换是不可行的，但可以通过一些技巧来实现类似的效果。
