--- a/CPP/C-C++07_常用算法.md
+++ b/CPP/C-C++07_常用算法.md
@@ -1,3 +1,73 @@
+## 查找算法
+
+在C++中，可以使用标准库提供的范围查找算法来在容器中查找特定元素或满足特定条件的元素。以下是一些常用的范围查找算法：
+
+1. `std::find()`：在指定范围内查找指定值的第一个匹配项。
+
+```cpp
+#include <algorithm>
+#include <vector>
+
+int main() {
+    std::vector<int> numbers = {1, 2, 3, 4, 5};
+
+    auto it = std::find(numbers.begin(), numbers.end(), 3);
+    if (it != numbers.end()) {
+        // 找到了元素
+    } else {
+        // 没有找到元素
+    }
+
+    return 0;
+}
+```
+
+2. `std::find_if()`：在指定范围内查找满足特定条件的第一个元素。
+
+```cpp
+#include <algorithm>
+#include <vector>
+
+bool isEven(int num) {
+    return num % 2 == 0;
+}
+
+int main() {
+    std::vector<int> numbers = {1, 2, 3, 4, 5};
+
+    auto it = std::find_if(numbers.begin(), numbers.end(), isEven);
+    if (it != numbers.end()) {
+        // 找到满足条件的元素
+    } else {
+        // 没有找到满足条件的元素
+    }
+
+    return 0;
+}
+```
+
+3. `std::binary_search()`：在已排序的范围内执行二分查找，判断指定值是否存在。
+
+```cpp
+#include <algorithm>
+#include <vector>
+
+int main() {
+    std::vector<int> numbers = {1, 2, 3, 4, 5};
+
+    bool exists = std::binary_search(numbers.begin(), numbers.end(), 3);
+    if (exists) {
+        // 值存在
+    } else {
+        // 值不存在
+    }
+
+    return 0;
+}
+```
+
+这些是一些常见的范围查找算法示例，您可以根据具体的需求选择适合的算法来执行查找操作。请注意，在使用这些算法之前，确保容器已经按照所需的顺序进行了排序（如果需要）。
+
 ## 射线法，判断点在多边形内
 
 + 思路
